# McServerShell

./: CMakeLists.txt  README.md  ansi_to_ncurses.cpp  main.cpp  processhandler.h
src/: ansi_to_ncurses.h  processhandler.cpp
tests/: manycolors.py
